# libsimplehttp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  simplehttp.pc.in
src/: Makefile  beast_carrier.h  common.h  simplehttpclient.cpp  simplehttpclient.h  simplehttpserver.cpp  simplehttpserver.h  testclient.cpp  testserver.cpp
